# OChess

./: .gitignore  README.md  chess.install  chess.opam  dune-project
assets/: board.png:Zone.Identifier
lib/: board.ml  captures.ml  check.ml  click.ml  constants.ml  draw.ml  dune  globals.ml  img.ml  log.ml  loop.ml  move.ml  path.ml  pawn.ml  pieces.ml  sidebar.ml  utils.ml  validate.ml  win.ml
test/: dune
